# ATP-Economy

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  atp-economy.md  pyproject.toml  runH.sh  sbb.md
configs/: H10_decouple_and_grow.yaml  H11_divergence_and_limits.yaml  H12_sustainable_adaptation.yaml  H13_sustainable_adaptation.yaml  H1_baseline_stability.yaml  H2_energy_scarcity.yaml  H3_environmental_collapse.yaml  H4_techno_optimism.yaml  H5_deglobalization.yaml  H6_financial_instability.yaml  H7_pressure_agnostic_growth.yaml  H8_env_agnostic_thriving.yaml  H9_extreme_pressure_decoupled.yaml
src/atp_economy/: cli.py  config.py
src/atp_economy/domain/: __init__.py  state.py
src/atp_economy/services/: __init__.py  agent_behavior.py  aggregation.py  consumption.py  demography.py  energy_bank.py  environment.py  extraction.py  innovation.py  metrics_flow.py  policy.py  pricing.py  production.py  settlement.py  storage_invest.py  trade.py
src/atp_economy/sim/: __init__.py  model.py
src/atp_economy/utils/: __init__.py  checks.py  integrators.py  metrics.py  tensor_utils.py
src/atp_economy/vis/: static.py
tests/: test_profiling.py
