[project]
name = "atp-economy"
version = "0.1.0"
description = "A GPU-accelerated simulation of a thermodynamic-like global economy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "rich>=14.1.0",
    "tensorboard>=2.20.0",
    "torch>=2.1.0",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
]


[project.scripts]
run-sim = "atp_economy.cli:app"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.uv]
# uv-specific configuration can go here
